Add ending questions

--- a/part_5_deep_dive_final.ipynb
+++ b/part_5_deep_dive_final.ipynb
@@ -1898,12 +1898,31 @@
     "All in all, I wanted to do a mix of the analysis but also setting this up in a way that it would still run with more data. \n",
     "\n",
     "\n",
-    "## Next Steps\n",
+    "### Next Steps\n",
     "The next step, in my opinion, would be to work with the team to figure out which one of these \"levers\" we could pull. Here are some experiments that we could try based off of these conculsions drawn:\n",
     "\n",
     "- Max boat level: Run an experiment to make it easier / faster to increase boat levels\n",
     "- Fishing Experience: Run an experiment to increase fishing experience by sharing the app with a friend\n",
-    "- Total currency spent: Decrease the cost of iAP for some users and see if it encourages them to spend more currency and impacts retention\n"
+    "- Total currency spent: Decrease the cost of iAP for some users and see if it encourages them to spend more currency and impacts retention\n",
+    "\n",
+    "\n",
+    "### Ending Questions\n",
+    "*How long did it take you to complete?*\n",
+    "This assingment all in all took me around 5 hours\n",
+    "\n",
+    "*When looking at a new data set, describe your process towards understanding the data*\n",
+    "I think thats answered a lot in the text above\n",
+    "\n",
+    "*What other data sets would have been valuable for your analysis*\n",
+    "- It would have been interesting to see more information on the \"organic\" vs \"inorganic\" side. I would be interested to know how granular that data goes and if we woulc see which ad campaigns people came from\n",
+    "- I would like to have session data into the future as well. I looked into how people who installed the app before-hand were retained during the live op period, but I would want to see if those people who *started* playing during the live op period were retained\n",
+    "- It would also have been helpful to know where the data I had was coming from and how reliable it was so that I could make a decision on what to do with nulls, missings, or incomplete data\n",
+    "\n",
+    "*What reasonings could you think of on why we do deep dives on live events*\n",
+    "- They are a perfect chance to run experiments and learn more about the customer. Its an opportunity to pull a \"lever\" that makes a KPI move either up or down and over time with multiple of these you get a better understanding of the user base and how to keep them engaged\n",
+    "- Its a good opporunity to learn something new. Sometimes I imagine that during a live op the \"hypothesis\" that you're testing turns out to not be the biggest insight. Maybe people responded in a totally different way that gives an idea for a different focus for a future live op event\n",
+    "- You can line up multiple data sets at once. For example, while you might not be able to fully connect each user to an ad campaign that they came from, if you sync up the live op event with an ad campaign it might allow you to draw connections and get more rich insights\n",
+    "\n"
    ]
   }
  ],
