Add extra feature importance module

--- a/part_5_deep_dive_final.ipynb
+++ b/part_5_deep_dive_final.ipynb
@@ -508,22 +508,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x12d14dd50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d1f41d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d22c9d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d2691d0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12d29e9d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d2de210>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d314a10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d352250>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12d352e50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d392810>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d3fca90>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d43a2d0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12d471ad0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d4af310>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d4e4b10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12d523350>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x11a811d50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1197b6d90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1197f95d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11982ddd0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11986e5d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1198a0dd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1198e2610>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119915e10>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119920990>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119963350>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1199cb690>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1199fde90>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119a3e6d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a73ed0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ab5710>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ae7f10>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1627,11 +1627,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1_day_retention</th>\n",
-       "      <th>7_day_retention</th>\n",
+       "      <th>14_day_retention</th>\n",
        "      <th>0_day_retention</th>\n",
        "      <th>3_day_retention</th>\n",
-       "      <th>14_day_retention</th>\n",
+       "      <th>1_day_retention</th>\n",
+       "      <th>7_day_retention</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1639,8 +1639,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1654,8 +1654,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1680,19 +1680,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   1_day_retention  7_day_retention  0_day_retention  3_day_retention  \\\n",
-       "0                0                0                0                1   \n",
-       "3                0                0                0                0   \n",
-       "4                0                0                1                0   \n",
-       "5                0                0                0                0   \n",
-       "6                0                0                0                0   \n",
+       "   14_day_retention  0_day_retention  3_day_retention  1_day_retention  \\\n",
+       "0                 0                0                1                0   \n",
+       "3                 0                0                0                0   \n",
+       "4                 0                1                0                0   \n",
+       "5                 0                0                0                0   \n",
+       "6                 0                0                0                0   \n",
        "\n",
-       "   14_day_retention  \n",
-       "0                 0  \n",
-       "3                 0  \n",
-       "4                 0  \n",
-       "5                 0  \n",
-       "6                 0  "
+       "   7_day_retention  \n",
+       "0                0  \n",
+       "3                0  \n",
+       "4                0  \n",
+       "5                0  \n",
+       "6                0  "
       ]
      },
      "execution_count": 13,
@@ -1787,7 +1787,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9196261682242991"
+       "0.914018691588785"
       ]
      },
      "execution_count": 17,
@@ -1842,8 +1842,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[984,  29],\n",
-       "       [ 57,   0]])"
+       "array([[978,  36],\n",
+       "       [ 56,   0]])"
       ]
      },
      "execution_count": 20,
@@ -1853,6 +1853,115 @@
    ],
    "source": [
     "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.feature_selection import SelectFromModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01062245, 0.0207015 , 0.02603883, 0.29520057, 0.11390617,\n",
+       "       0.29145463, 0.09874748, 0.14332838])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = ExtraTreesClassifier(n_estimators=100)\n",
+    "clf = clf.fit(train_x, train_y)\n",
+    "clf.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['total_currency_spent_n', 0.2952005720567495],\n",
+       " ['fishing_experience_n', 0.29145462806376343],\n",
+       " ['crew_amount_n', 0.14332838450362928],\n",
+       " ['max_boat_level_n', 0.11390616542276204],\n",
+       " ['map_location_n', 0.09874747669628925],\n",
+       " ['platform_IOS', 0.026038828109273503],\n",
+       " ['country_US', 0.020701499061549982],\n",
+       " ['channel_ORGANIC', 0.010622446085983103]]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://scikit-learn.org/stable/modules/feature_selection.html\n",
+    "labeled_feature_importances = []\n",
+    "for i in range(len(clf.feature_importances_)):\n",
+    "    feature_importance = clf.feature_importances_[i]\n",
+    "    column = train_x.columns[i]\n",
+    "    \n",
+    "    labeled_feature_importances.append([column, feature_importance])\n",
+    "\n",
+    "sorted_feature_importances = sorted(labeled_feature_importances,key=lambda x: -x[1])\n",
+    "sorted_feature_importances\n",
+    "\n",
+    "# clf = ExtraTreesClassifier(n_estimators=10)\n",
+    "# [['total_currency_spent_n', 0.2952005720567495],\n",
+    "#  ['fishing_experience_n', 0.29145462806376343],\n",
+    "#  ['crew_amount_n', 0.14332838450362928],\n",
+    "#  ['max_boat_level_n', 0.11390616542276204],\n",
+    "#  ['map_location_n', 0.09874747669628925],\n",
+    "#  ['platform_IOS', 0.026038828109273503],\n",
+    "#  ['country_US', 0.020701499061549982],\n",
+    "#  ['channel_ORGANIC', 0.010622446085983103]]\n",
+    "\n",
+    "# clf = ExtraTreesClassifier(n_estimators=20)\n",
+    "# [['total_currency_spent_n', 0.2980123270303389],\n",
+    "#  ['fishing_experience_n', 0.2835244851778749],\n",
+    "#  ['crew_amount_n', 0.14422546445674506],\n",
+    "#  ['max_boat_level_n', 0.11026973253682666],\n",
+    "#  ['map_location_n', 0.09567544205701309],\n",
+    "#  ['platform_IOS', 0.029975394164638607],\n",
+    "#  ['channel_ORGANIC', 0.021133654033663237],\n",
+    "#  ['country_US', 0.017183500542899608]]\n",
+    "\n",
+    "# clf = ExtraTreesClassifier(n_estimators=50)\n",
+    "# [['total_currency_spent_n', 0.3120783345134442],\n",
+    "#  ['fishing_experience_n', 0.2763971621245534],\n",
+    "#  ['crew_amount_n', 0.14422988211045612],\n",
+    "#  ['max_boat_level_n', 0.1123294123435868],\n",
+    "#  ['map_location_n', 0.0943853623965093],\n",
+    "#  ['platform_IOS', 0.025637771524389907],\n",
+    "#  ['country_US', 0.022832681605768557],\n",
+    "#  ['channel_ORGANIC', 0.012109393381291775]]\n",
+    "\n",
+    "# clf = ExtraTreesClassifier(n_estimators=100)\n",
+    "# [['total_currency_spent_n', 0.30683801546597894],\n",
+    "#  ['fishing_experience_n', 0.2812701183083532],\n",
+    "#  ['crew_amount_n', 0.14079145445962607],\n",
+    "#  ['max_boat_level_n', 0.11726545972234378],\n",
+    "#  ['map_location_n', 0.09763250489011815],\n",
+    "#  ['platform_IOS', 0.02426148051173549],\n",
+    "#  ['country_US', 0.018269353475528095],\n",
+    "#  ['channel_ORGANIC', 0.013671613166316248]]\n"
    ]
   },
   {
