Add sklearn feature importance

--- a/part_5_deep_dive_final.ipynb
+++ b/part_5_deep_dive_final.ipynb
@@ -508,22 +508,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x11a811d50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1197b6d90>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1197f95d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11982ddd0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11986e5d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1198a0dd0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1198e2610>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119915e10>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119920990>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119963350>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1199cb690>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1199fde90>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119a3e6d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a73ed0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ab5710>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ae7f10>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x122623310>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1215c7e50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12160a650>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12163de50>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12167f690>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1216b1e90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1216f26d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x121726ed0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x121731a50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x121772410>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1217dc750>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x12180ef50>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x12184f790>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x121883f90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1218c67d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1218f6fd0>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1627,19 +1627,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>14_day_retention</th>\n",
        "      <th>0_day_retention</th>\n",
        "      <th>3_day_retention</th>\n",
-       "      <th>1_day_retention</th>\n",
        "      <th>7_day_retention</th>\n",
+       "      <th>1_day_retention</th>\n",
+       "      <th>14_day_retention</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1653,8 +1653,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1680,19 +1680,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   14_day_retention  0_day_retention  3_day_retention  1_day_retention  \\\n",
-       "0                 0                0                1                0   \n",
-       "3                 0                0                0                0   \n",
-       "4                 0                1                0                0   \n",
-       "5                 0                0                0                0   \n",
-       "6                 0                0                0                0   \n",
+       "   0_day_retention  3_day_retention  7_day_retention  1_day_retention  \\\n",
+       "0                0                1                0                0   \n",
+       "3                0                0                0                0   \n",
+       "4                1                0                0                0   \n",
+       "5                0                0                0                0   \n",
+       "6                0                0                0                0   \n",
        "\n",
-       "   7_day_retention  \n",
-       "0                0  \n",
-       "3                0  \n",
-       "4                0  \n",
-       "5                0  \n",
-       "6                0  "
+       "   14_day_retention  \n",
+       "0                 0  \n",
+       "3                 0  \n",
+       "4                 0  \n",
+       "5                 0  \n",
+       "6                 0  "
       ]
      },
      "execution_count": 13,
@@ -1787,7 +1787,7 @@
     {
      "data": {
       "text/plain": [
-       "0.914018691588785"
+       "0.922429906542056"
       ]
      },
      "execution_count": 17,
@@ -1842,8 +1842,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[978,  36],\n",
-       "       [ 56,   0]])"
+       "array([[987,  28],\n",
+       "       [ 55,   0]])"
       ]
      },
      "execution_count": 20,
@@ -1867,17 +1867,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.01062245, 0.0207015 , 0.02603883, 0.29520057, 0.11390617,\n",
-       "       0.29145463, 0.09874748, 0.14332838])"
+       "array([0.01395897, 0.01748895, 0.03028243, 0.31702319, 0.11218256,\n",
+       "       0.27662084, 0.09502998, 0.13741309])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,23 +1890,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['total_currency_spent_n', 0.2952005720567495],\n",
-       " ['fishing_experience_n', 0.29145462806376343],\n",
-       " ['crew_amount_n', 0.14332838450362928],\n",
-       " ['max_boat_level_n', 0.11390616542276204],\n",
-       " ['map_location_n', 0.09874747669628925],\n",
-       " ['platform_IOS', 0.026038828109273503],\n",
-       " ['country_US', 0.020701499061549982],\n",
-       " ['channel_ORGANIC', 0.010622446085983103]]"
+       "[['total_currency_spent_n', 0.3170231895111955],\n",
+       " ['fishing_experience_n', 0.27662083658412445],\n",
+       " ['crew_amount_n', 0.1374130938184953],\n",
+       " ['max_boat_level_n', 0.11218255824195848],\n",
+       " ['map_location_n', 0.09502997923274262],\n",
+       " ['platform_IOS', 0.030282425133958978],\n",
+       " ['country_US', 0.017488947791288626],\n",
+       " ['channel_ORGANIC', 0.013958969686235978]]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
