Reorder top features

--- a/part_5_deep_dive_final.ipynb
+++ b/part_5_deep_dive_final.ipynb
@@ -1990,9 +1990,9 @@
    "source": [
     "From these trees (and according to this small sample size in this analysis) we can see that the following features were the most predictive:\n",
     "\n",
-    "- Max boat level\n",
-    "- Fishing experience\n",
     "- Total currencty spent\n",
+    "- Fishing experience\n",
+    "- Crew Amount\n",
     "\n",
     "As these branches in the tree led to the most cases where there was retention. \n",
     "\n",
@@ -2033,6 +2033,13 @@
     "- You can line up multiple data sets at once. For example, while you might not be able to fully connect each user to an ad campaign that they came from, if you sync up the live op event with an ad campaign it might allow you to draw connections and get more rich insights\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
