--- a/part_5_deep_dive_final.ipynb
+++ b/part_5_deep_dive_final.ipynb
@@ -1971,16 +1971,16 @@
     "## Conculsion\n",
     "\n",
     "\n",
-    "### 1_day_rention decision tree\n",
+    "### 1_day_retention decision tree\n",
     "![1_day_retention_dtree](1_day_retention_dtree.png)\n",
     "\n",
-    "### 3_day_rention decision tree\n",
+    "### 3_day_retention decision tree\n",
     "![3_day_retention_dtree](3_day_retention_dtree.png)\n",
     "\n",
-    "### 7_day_rention decision tree\n",
+    "### 7_day_retention decision tree\n",
     "![7_day_retention_dtree](7_day_retention_dtree.png)\n",
     "\n",
-    "### 14_day_rention decision tree\n",
+    "### 14_day_retention decision tree\n",
     "![14_day_retention_dtree](14_day_retention_dtree.png)"
    ]
   },
@@ -1990,7 +1990,7 @@
    "source": [
     "From these trees (and according to this small sample size in this analysis) we can see that the following features were the most predictive:\n",
     "\n",
-    "- Total currencty spent\n",
+    "- Total currency spent\n",
     "- Fishing experience\n",
     "- Crew Amount\n",
     "\n",
